# GOREKLIP

./: CMakeLists.txt  GOREKLIP.jucer
.github/workflows/: build.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/FRUITYCLIP.xcodeproj/: project.pbxproj
Builds/MacOSX/GOREKLIP.xcodeproj/: project.pbxproj
GOREKLIP-create-branch-3/: CMakeLists.txt  FRUITYCLIP.jucer
GOREKLIP-create-branch-3/Builds/MacOSX/: Info-AU.plist  Info-VST3_Manifest_Helper.plist
GOREKLIP-create-branch-3/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
GOREKLIP-create-branch-3/Source/: JuceHeader.h  PluginEditor.h  PluginProcessor.cpp
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AnalogNullModelData.cpp  AnalogNullModelData.h  CustomLookAndFeel.h  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.diff  PluginProcessor.h  PluginProcessor_nulled.cpp  PluginProcessor_patched.cpp  PluginProcessor_patched.h  README_LUT_FIX.txt  fruity_knee_lut_8192-2.cpp  fruity_knee_lut_8192-2.h  fruity_knee_lut_8192.h  fruity_piecewise_lut_131072_t0_0p95_xmax8.h
Tests/: SilkMaxOffline.cpp
